Adds MySQL DB Backend (#1)
* Added connection to mysql db

* Updates devcontainers to include mysql db

* Updates workflow for application tests

* Adds health endpoint

* Adds a separate docker compose for the ci
