# docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Responds with OK if the service is up and running",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/movies": {
             "get": {
                 "description": "Get all movies",
@@ -20,7 +40,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/internal_api.Movie"
+                                "$ref": "#/definitions/internal_api.APIMovie"
                             }
                         }
                     }
@@ -53,7 +73,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_api.Movie"
+                            "$ref": "#/definitions/internal_api.APIMovie"
                         }
                     },
                     "404": {
@@ -64,7 +84,7 @@
         }
     },
     "definitions": {
-        "internal_api.Movie": {
+        "internal_api.APIMovie": {
             "type": "object",
             "properties": {
                 "director": {
@@ -77,7 +97,7 @@
                     "type": "string"
                 },
                 "year": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
